--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@zkty-team/vuex": "^1.0.8",
-    "@zkty-team/x-engine-core": "^1.0.7",
-    "@zkty-team/x-engine-lifecycle": "^1.0.4",
-    "@zkty-team/x-engine-router": "^1.0.4",
-    "@zkty-team/x-engine-ui": "^1.1.11",
+    "@zkty-team/vue-router": "^1.1.4",
+    "@zkty-team/vuex": "^1.1.0",
+    "@zkty-team/x-engine-core": "^1.1.1",
+    "@zkty-team/x-engine-lifecycle": "^1.0.5",
+    "@zkty-team/x-engine-ui": "^1.1.21",
     "axios": "^0.21.1",
     "core-js": "^3.12.1",
     "less": "^4.1.1",
-    "less-loader": "^5.0.0",
+    "less-loader": "^7.0.0",
     "vant": "^2.12.17",
     "vconsole": "^3.5.1",
     "vue": "^2.6.11",
