--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@zkty-team/vuex": "^1.0.8",
-    "@zkty-team/x-engine-core": "^1.0.7",
-    "@zkty-team/x-engine-lifecycle": "^1.0.4",
-    "@zkty-team/x-engine-router": "^1.0.4",
-    "@zkty-team/x-engine-ui": "^1.1.11",
+    "@zkty-team/vue-router": "^2.8.0",
+    "@zkty-team/vuex": "^2.8.0",
+    "@zkty-team/x-engine-core": "^2.8.0",
+    "@zkty-team/x-engine-ui": "^2.8.0",
+    "@zkty-team/x-engine-lifecycle": "^2.8.0",
     "axios": "^0.21.1",
     "core-js": "^3.12.1",
     "less": "^4.1.1",
