--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@zkty-team/vue-router": "^3.0.6",
     "@zkty-team/vuex": "^3.0.6",
     "@zkty-team/x-engine-core": "^3.0.6",
-    "@zkty-team/x-engine-ui": "^3.0.6",
     "@zkty-team/x-engine-lifecycle": "^3.0.6",
+    "@zkty-team/x-engine-ui": "^3.0.6",
     "axios": "^0.21.1",
+    "copy-webpack-plugin": "^6.0.0",
     "core-js": "^3.12.1",
+    "filemanager-webpack-plugin": "^4.0.0",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
     "vant": "^2.12.17",
@@ -30,9 +32,9 @@
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vconsole": "^3.5.1",
     "vconsole-webpack-plugin": "^1.5.1",
-    "vue-template-compiler": "^2.6.11",
-    "vconsole": "^3.5.1"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
